# -

./: .coverage  .gitignore  .pre-commit-config.yaml  DEDUPLICATION_REPORT.md  PROJECT_COMPREHENSIVE_REFLECTION.md  PROJECT_REFLECTION_REPORT.md  README.md  SECOND_REFACTOR_REPORT.md  app.manifest  cleanup_plan_high.json  config.json  debt_analysis_report.md  debt_cleanup_progress.db  docs_validation_test.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_in_venv.py  settings.json  setup.py  start.bat  start_windows.bat  test_capture_engines.py  test_modern_ui.py  test_progress_components.py  test_progress_import.py  ui_card_layout_optimization_completed.md  代码库功能设计分析报告.md  开发完善计划.md  服务职责分析报告.md  目录重构完成报告.md  目录重构执行计划.md  第三阶段完成报告.md  第三阶段执行计划.md  第二阶段完成报告.md  重构完成总结.md  项目重构总结报告.md
.debt_cleanup_backups/backup_20250721_004022/src/: __init__.py  main.py
.dev/: setup.py  start.bat
.dev/.github/workflows/: ci.yml
.dev/legacy/docker_removed/: .dockerignore  Dockerfile
.github/workflows/: ci.yml
.tasks/: 2024-12-28_1_duplicate-code-analysis.md  2025-01-14_1_code-analysis.md  2025-01-20_1_debt_cleanup.md  2025-01-20_1_ui-redesign-implementation.md  2025-01-25_1_remove_unnecessary_docker_fastapi.md  2025-01-25_1_system-stability-bugfix.md  2025-01-25_2_fix_import_issues.md  2025-01-27_1_debt_cleanup_execution.md  2025-07-02_1_performance-optimization.md  hardcoded_import_fix_plan_20250721.md  migration_implementation_20241220_1.md  modern_ui_css_compatibility_fix_20250120_1.md  root_directory_cleanup_20250120_1.md  ui_card_layout_fix_20250120_1.md  window_architecture_refactoring_20241220.md
.trae/rules/: project_rules.md
config/: .pylintrc  config.json  module_config.json  mypy.ini  qt.conf
docs/: CLEAN_ARCHITECTURE_SUMMARY.md  README.md  README_module_system.md  architecture.md  configuration.md  developer-guide.md  index.md  窗口捕获架构重构说明.md  系统架构改进方案.md
docs/api/core/: unified-game-analyzer.md
docs/architecture/: analysis-report.md  architecture.md  next-generation.md  window-refactoring-summary.md
docs/development/: configuration.md  developer-guide.md  module_system_usage.md  unified-config-system.md
docs/migration/: migration-guide.md  refactoring-guide.md  refactoring-implementation.md  window-manager-migration.md
docs/quality/: improvements.md  report.md  technical-debt-analysis.md
docs/user/: quick-start.md
examples/: di_example.py
game_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
legacy/docker_removed/: STARTUP_GUIDE.md  docker-compose.yml
python_setup/: python_urls.txt
scripts/: download_python.ps1  refactor_libs.py  run_in_venv.py  setup_python.bat  uv-setup.ps1
src/: config_manager.py  main.py  settings.json
src/api/: main.py
src/api/routers/: __init__.py  auth.py  automation.py  games.py  health.py  vision.py  websocket.py
src/application/: __init__.py
src/application/containers/: __init__.py  main_container.py
src/collector/: __init__.py  screen_collector.py
src/common/: __init__.py  action_system.py  app_config.py  app_utils.py  config_manager.py  containers.py  error_types.py  exceptions.py  module_discovery.py  module_types.py  monitor.py  recovery.py  simple_initializer.py  system_initializer.py
src/config/: settings.py
src/core/: __init__.py  config.py  config_manager.py  container.py  database.py  game_analyzer.py  logging.py  middleware.py  resource_manager.py  state_machine.py  unified_game_analyzer.py
src/core/analyzers/: image_recognition.py
src/core/automation/: auto_operator.py
src/core/container/: container_config.py  di_container.py
src/core/domain/: window_models.py
src/core/engines/: decision_engine.py  dqn_agent.py
src/core/executors/: __init__.py  action_executor.py  input_controller.py
src/core/interfaces/: __init__.py  adapters.py  repositories.py  services.py  window_manager.py
src/core/models/: state_history_model.py
src/core/types/: __init__.py  unified_action_types.py  unified_game_state.py  unified_template_match.py
src/games/arknights/: arknights_adapter.py
src/games/genshin/: genshin_adapter.py
src/games/starrail/: starrail_adapter.py
src/games/zzz/: zzz_adapter.py
src/gui/: main_window.py
src/gui/dialogs/: automation_manager_dialog.py  (+2 more)
src/infrastructure/: __init__.py
src/legacy/: simple_automation.py
src/macro/: macro_editor.py  macro_player.py
src/models/: game_automation_model.py  main_view_model.py
src/performance/: performance_view.py
src/presentation/: __init__.py
src/services/: __init__.py  action_simulator.py  auto_operator.py  capture_engines.py  config.py  config_manager.py  error_handler.py  exceptions.py  game_analyzer.py  game_state.py  game_state_analyzer.py  image_processor.py  logger.py  main.py  template_collector.py  window_manager.py
src/tests/: directory_refactor_test.py  service_responsibility_test.py
src/tools/: code_cleanup.py
src/ui/: main_window.py
src/utils/: image_recognition.py
src/viewmodels/: main_viewmodel.py
src/views/: __init__.py  display_panel.py  resources.qrc  settings_panel.py  tray_manager.py
src/zzz/: __init__.py
tests/: final_validation_test.py  run_tests.py  simple_test.py  test_action_executor.py  test_auto_operator.py  test_basic.py  test_config_manager.py  test_core.py  test_decision_engine.py  test_editor.py  test_error_handler.py  test_games.py  test_image_recognition.py  test_input_controller.py  test_integration_module_system.py  test_macro.py  test_main_window.py  test_module_discovery.py  test_module_manager.py  test_operation_recorder.py  test_performance.py  test_screen_collector.py  test_startup.py
tests/functional/: __init__.py  test_functional.py  test_performance.py
tests/integration/: test_game_automation_flow.py
tests/system/: refactor_validation_test.py
tests/unit/: __init__.py
tools/debt_cleanup/: README.md  __init__.py  cleanup_manager.py  config.py  debt_analyzer.py  main.py  progress_tracker.py
tools/quality/: analyzer.py  simple_check.py
tools/testing/: test_di_system.py  test_import.py  test_simple.py
(+185 files in other folders)
